fix form styling on smaller screens

--- a/src/styles/forms.styl
+++ b/src/styles/forms.styl
@@ -58,7 +58,17 @@ form.inline
         display block
         min-width initial
         width 100%
+      input[type=checkbox]
+        width auto
+        display inline-block
     .submit-container
       text-align center
       button, input
         width 100%
+  form.inline
+    .input-container
+      display inline-block
+      input, label
+        display inline-block
+    button
+      width auto
